# ogl

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: light.frag  main.frag  main.vert
src/: camera.cpp  camera.hpp  delta_time.hpp  main.cpp  shader.cpp  shader.hpp
